--- a/css/custom.css
+++ b/css/custom.css
@@ -43,11 +43,11 @@
 }
 @font-face {
     font-family: 'AlegreyaBold';
-    src: url('http://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.eot');
-    src: url('http://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('http://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.woff') format('woff'),
-         url('http://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.ttf') format('truetype'),
-         url('http://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.svg#AlegreyaBold') format('svg');
+    src: url('https://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.eot');
+    src: url('https://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.woff') format('woff'),
+         url('https://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.ttf') format('truetype'),
+         url('https://www.housingstudies.org/static/css/fonts/Alegreya-Bold-webfont.svg#AlegreyaBold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
