--- a/css/custom.css
+++ b/css/custom.css
@@ -325,7 +325,7 @@ section{
 .wrapper.large-wrap{max-width: 100%;}
 
 section:nth-of-type(4){
-	background-image: src(img/Daisy.jpg)
+	background-image: url(img/Daisy.jpg)
 }
 
 section:before{
