--- a/css/custom.css
+++ b/css/custom.css
@@ -32,11 +32,11 @@
 }
 @font-face {
     font-family: 'ColaborateRegRegular';
-    src: url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.eot');
-    src: url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.eot?#iefix') format('embedded-opentype'),
-         url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.woff') format('woff'),
-         url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.ttf') format('truetype'),
-         url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.svg#ColaborateRegRegular') format('svg');
+    src: url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.eot');
+    src: url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.woff') format('woff'),
+         url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.ttf') format('truetype'),
+         url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.svg#ColaborateRegRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 
