--- a/css/custom.css
+++ b/css/custom.css
@@ -34,8 +34,8 @@
     font-family: 'ColaborateRegRegular';
     src: url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.eot');
     src: url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.eot?#iefix') format('embedded-opentype'),
-         url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.woff') format('woff'),
-         url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.ttf') format('truetype'),
+         url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.woff') format('woff'),
+         url('http://www.housingstudies.org/static/css/fonts/ColabReg-webfont.ttf') format('truetype'),
          url('https://www.housingstudies.org/static/css/fonts/ColabReg-webfont.svg#ColaborateRegRegular') format('svg');
     font-weight: normal;
     font-style: normal;
