--- a/css/custom.css
+++ b/css/custom.css
@@ -307,13 +307,13 @@ p{
 
 /* ==== General styles ==== */
 section{
-	height: 400px;
+	max-height: 400px;
 	padding: 3rem 0;
 	position: relative;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	background-image: url(../img/SweetViolet.jpg);
-	opacity: 50%;
+	opacity: 75%;
 	background-repeat: no-repeat; 
 	background-size: cover;
 }
