--- a/css/custom.css
+++ b/css/custom.css
@@ -53,7 +53,8 @@
     
 body { 
   font: 18px/1.3em 'ColaborateThinRegular', sans-serif;
-  background-color: #f4f4f4;
+  background-color: #404040;
+  color: white;
 }
 
 h1 {
