--- a/css/custom.css
+++ b/css/custom.css
@@ -54,10 +54,9 @@
 body { 
   font: 18px/1.3em 'ColaborateThinRegular', sans-serif;
   background-color: #404040;
-  color: white;
 }
 .container-fluid{
-	background-color: none;
+	background-color: #f4f4f4;
 }
 
 h1 {
